Setup Express and TS routing + handlers

--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  },
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts"
   }
 }
