--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "test:latency": "ts-node src/test/latencyJsonTest.ts"
+    "test:latency": "ts-node src/test/latencyTest.ts"
   }
 }
