--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "type": "commonjs",
   "dependencies": {
+    "@types/node-fetch": "^2.6.12",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
-    "@types/ws": "^8.5.10",
+    "@types/ws": "^8.18.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
